Fix safari page overflow bug

--- a/assets/scss/core/common.scss
+++ b/assets/scss/core/common.scss
@@ -48,6 +48,7 @@ main,
   flex-direction: column;
   flex: 1;
   width: 100%;
+  overflow: hidden;
 
   &.page--dark {
     background: $black17;
